0.1712
    - you can set any string as separator
0.1711
    - renamed EXPERIMENTAL available_type_name to available_typename
    - renamed EXPERIMENTAL available_data_type to available_datatype
    - added EXPERIMENTAL DBIx::Custom::Where if method
    - added EXPERIMENTAL DBIx::Custom::Where map method
0.1710
    - use more DBIx::Custom information in sub modules to decrease bugs
      (very sorry, this change can't keep backword compatible,
       but maybe no effects,
       because the attributes is automatically set by DBIx::Custom, not user).
    - Fixed fisrt executed where clause failed in some condition.
0.1709
    - fixed named placeholder bug and added escape syntax
0.1708
    - improved execute method performance
0.1707
    - I call :title named placeholder, stoping calling it parameter
    - removed some EXPERIMENTAL status
    - fixed performance
0.1706
    - Added execute method's query option document
      You can get more performance.
    - DBIx::Custom::Query table and filters attribute method and
      filter method is DEPRECATED!
      because I think query object must have only the information
      for statement handle caching.
0.1705
    - insert and update method's param can set constant value by scalara reference
      such as {date => \"NOW()"} This is EXPERIMENTAL.
0.1704
    - added quote method's two character support like []
      for Microsoft SQL Server and Access
    - added EXPERIMENTAL parameter new syntax :name{operator}
0.1703
    - added EXPERIMENTAL join new syntax.
0.1702
    - removed EXPERIMENTAL status of some methods.
    - fixed some join bug
0.1701
    - added DBIx::Cusotm::Order prepend method automatically quoted syntax
    - simplified arguments check
    - added EXPERIMENTAL each_table method
    - select method column option [COLUMN, as => ALIAS] format is DEPRECATED!
      changed to [COLUMN => ALIAS]
    - added EXPERIMENTAL DBIx::Custom::Result header method
    - added EXPERIMENTAL last_sql attribute method